amendments following 3rd review - fix index page card alignments

--- a/public/stylesheets/bootstrap/bootstrap.css
+++ b/public/stylesheets/bootstrap/bootstrap.css
@@ -4755,7 +4755,6 @@ input[type="button"].btn-block {
 
 .card-body {
   -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
   min-height: 1px;
   padding: 1.25rem;
 }
